# zeno

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .rgignore  .tasks  0001-temp-api-cache.patch  BUILD.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile.archlinux  Dockerfile.ubuntu  GNUmakefile  LICENSE  Makefile  P2G.zsg  README.md  README.zh.md  a.cpp  a.h  a.json  a.py  a.txt  a.zsg  abc.zsg  arts  assets  b.json  blackboard.zsg  blender.sh  build.bat  build.ps1  build.py  build.sh  build_all.sh  clean.py  clean.sh  (+67 more)
AeroLBM/: CMakeLists.txt  Makefile  chess.html  lbm.py  main.cpp  mpm.py  openio.py  zeno.py
CoolNBody/: CMakeLists.txt  Makefile  conv.py  main.cpp  solarsystem.txt
CudaTest/: Array.cuh  CMakeLists.txt  Launch.cuh  NDArray.cuh  containers.cuh  helper_cuda.h  main.cu  managed.cuh  ndarray.cuh  tree.cuh
FastFLIP/: CMakeLists.txt  FLIP_vdb.cpp  FLIP_vdb.h  FLIPwrapper.cpp  GNUmakefile  Sparse_buffer.h  amg2.h  array3_utils.h  dummy.cpp  fluidsim.cpp  fucker.cpp  sdf_source_manager.h  simd_vdb_poisson.cpp  simd_vdb_poisson.h  test.py  volumeMeshTools.cpp  volumeMeshTools.h
FastFLIP/d3dutils/: Timer.cpp
FastFLIP/lostopos/: dynamicsurface.h  edgecollapser.h  h-file-template.txt  meshpincher.h  meshsnapper.cpp  options.h
FastFLIP/ltcommon/: array2.h  bfstream.h  blas_wrapper.h  commonoptions.h  mat.h  predicates.cpp  runstats.h  util.h
FastFLIP/nosys/: CFL.cpp  ExtrapolateVelocity.cpp  FLIP.cpp  FLIPEmitter.cpp  FLIP_Creator.cpp  FieldAddVector.cpp  (+9 more)
MPM/: CMakeLists.txt  ZenoSimulation.h  ZensimContainer.h  ZensimGeometry.h  ZensimModel.h  ZensimObject.h  main.cpp
OpenFDB/: CMakeLists.txt  Makefile  MathVec.h  SparseGrid.h  Transform.h  VolumeGrid.h  a.py  a.txt  densevdb.cpp  main.cpp  marching.h  openvdb.cpp  types.h  vec.h
OpenglVis/: CMakeLists.txt  GNUmakefile  ShaderProgram.hpp  fake0100.txt  imgui.ini  main.cpp  main.hpp  particles.frag  particles.vert  tags  test.py  volume.frag  volume.vert
Projects/: CMakeLists.txt  Makefile  README.md
QuickOCT/: .gitignore  CMakeLists.txt  OctreeObject.h  conv.py  main.cpp
ShmTest/: CMakeLists.txt  GNUmakefile  client.cpp  main.cpp  server.cpp
TbbTest/: CMakeLists.txt  Fuckee.cpp  Fucker.cpp  Makefile
ZFX/: AST.h  CMakeLists.txt  ConstParametrize.cpp  ConstantFold.cpp  ControlCheck.cpp  DemoteMathFuncs.cpp  DetectNewChannels.cpp  EmitAssembly.cpp  ExpandFunctions.cpp  GlobalLocalize.cpp  IR.h  IRVisitor.h  KillUnreachable.cpp  Lexical.h  LowerAST.cpp  LowerAST.h  LowerAccess.cpp  LowerControl.cpp  LowerMath.cpp  Makefile  MathFunctions.cpp  MergeIdentical.cpp  NVRTC.cuh  NoReluctantLoad.cpp  Parser.cpp  Parser.h  ReassignParameters.cpp  RegisterAllocation.cpp  SaveMathRegisters.cpp  Statement.h  StmHelper.h  Stmts.h  SymbolCheck.cpp  TODO.txt  Tokenizer.cpp  Tokenizer.h  TypeCheck.cpp  Visitors.h  ZFX.cpp  ZFX.h  (+10 more)
ZMS/: CMakeLists.txt  Interaction.cpp  Interaction.h  analysis.cpp  forcefield.cpp  system.cpp  thermostat.cpp
assets/: CMakeLists.txt  FLIPSolver.zsg  GPUMPMExample.zsg  GPUMPMStepDt.zsg  GanYu.abc  HACD.zsg  SpaceShip.abc  blender.blend  comment.zsg  crag.zsg  crash.zsg  demoproject.zsg  dubinski.zpm  forloop.zsg  forloop2.zsg  gctest.zsg  lennardjones.zsg  list.zsg  logic.zsg  mesh.frag  mesh.vert  mesh.zsg  numeric2.zsg  octree.zsg  octree2.zsg  par2prim.zsg  pars.zsg  particles.frag  particles.vert  perlin.glsl  prim.zsg  prim2.zsg  primdump.zsg  res.vdb  rigid.zsg  rigid3.zsg  rigid_pool.zsg  rigidcompound.zsg  rock.mtl  rubbertoy.abc  (+16 more)
blender/: CMakeLists.txt  main.cpp  start.py
core/: CMakeLists.txt
demo_project/: CMakeLists.txt  Makefile  MyNode.cpp  main.cpp
designer/: CMakeLists.txt  common.h  common_id.h  componentitem.cpp  componentitem.h  designermainwin.cpp  designermainwin.h  dragpointitem.h  framework.h  layertreeitemdelegate.cpp  layertreeitemdelegate.h  layerwidget.cpp  layerwidget.h  main.cpp  nodegrid.cpp  nodegrid.h  nodescene.cpp  nodescene.h  nodesview.cpp  nodesview.h  nodeswidget.cpp  nodeswidget.h  nodetemplate.cpp  nodetemplate.h  propertypane.cpp  renderparam.h  resizableitemimpl.cpp  resizableitemimpl.h  resizecoreitem.cpp  resizecoreitem.h  resizerectitem.cpp  resizerectitem.h  styletabwidget.cpp  styletabwidget.h  timelineitem.cpp  timelineitem.h  viewmdiarea.cpp  zenonode.cpp  zenonode.h  zpropertiespanel.cpp  (+5 more)
editor/: ApplicationData.cpp  ApplicationData.h  CMakeLists.txt  ZenoCollection.qml  ZenoEdge.qml  ZenoHalfLink.qml  ZenoInput.qml  ZenoLink.qml  ZenoNode.qml  ZenoOutput.qml  ZenoParam.qml  ZenoScene.qml  ZenoSceneObject.cpp  ZenoSceneObject.h  ZenoSocket.qml  framework.h  graphsmanagment.cpp  graphsmanagment.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdmgraphicsbackground.cpp  qdmgraphicsbackground.h  qdmgraphicslink.cpp  qdmgraphicslink.h  qdmgraphicslinkfull.cpp  qdmgraphicslinkfull.h  qdmgraphicslinkhalf.cpp  qdmgraphicslinkhalf.h  qdmgraphicsnode.cpp  qdmgraphicsnode.h  qdmgraphicsscene.cpp  qdmgraphicsscene.h  qdmgraphicssocket.cpp  qdmgraphicssocket.h  qdmgraphicssocketin.cpp  qdmgraphicssocketin.h  qdmgraphicssocketout.cpp  (+20 more)
main/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
projects/: CMakeLists.txt  dummy.cpp
pyzeno/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  gtest_helpers.h  test_any.cpp  test_numeric.cpp  test_vec.cpp
worker/: CMakeLists.txt  main.cpp  old_subnet.cpp.pruned
zen/: CMakeLists.txt  EndFrame.cpp  MANIFEST.in  Makefile  P2G_Advector.cpp  RandomParticles.cpp  SimpleSolver.cpp  ViewMesh.cpp  ViewParticles.cpp  Visualization.cpp  WriteParticles.cpp  WriteVDBGrid.cpp  __init__.py  addon.py  api.py  build.py  chatroom.txt  cpp.py  dll.py  libzen.cpp  libzenpy.cpp  npy.py  py.py  run.py  test.py  zen-config.cmake  zen.cpp
zenbase/: CMakeLists.txt  GNUmakefile  MakeMatrix.cpp  ReadObjMesh.cpp  SetVDBTransform.cpp  SimpleSolver.cpp  SleepMilis.cpp  TransformMesh.cpp  ViewMesh.cpp  test.py
zeneditor/: CMakeLists.txt  GNUmakefile  MANIFEST.in  Makefile  NodeEditor.h  crash.py  imgui.ini  main.cpp
(+9102 files in other folders)
