function(make_include_asset input_file output_file)
    if (NOT EXISTS ${output_file})
        message(WARNING "Generating header asset: ${output_file}")
        file(READ ${input_file} content)
        set(delim "for_c++_include")
        set(content "R\"${delim}(${content})${delim}\"")
        file(WRITE ${output_file} "${content}")
    endif()
endfunction(make_include_asset)

set(include_dir ${CMAKE_CURRENT_BINARY_DIR}/zeno2/assets)
file(MAKE_DIRECTORY ${include_dir})
file(GLOB files LIST_DIRECTORIES FALSE CONFIGURE_DEPENDS assets/*)
foreach (file ${files})
    get_filename_component(name ${file} NAME)
    make_include_asset(${file} ${include_dir}/${file}.h)
endforeach()

add_library(zeno.binaries INTERFACE)
target_include_directories(zeno.binaries INTERFACE ${include_dir})